# openarm

./: README.md  robot2.urdf  simple_launch_example.py  test.urd  test.urdf  v10.urdf.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/openarm/share/openarm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/openarm_bimanual_moveit_config/share/openarm_bimanual_moveit_config/: .setup_assistant  local_setup.bash  (+5 more)
log/: latest_build
openarm_bimanual_moveit_config/config/: chomp.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  openarm_bimanual.srdf  planning_pipelines.yaml  trayectory_exec.yaml
openarm_bimanual_moveit_config/launch/: demo.launch.py  demo2.launch.py
openarm_bringup/launch/: openarm.launch.py
openarm_hardware/install/: setup.sh
openarm_hardware/log/: latest_build
openarm_p_p/: CMakeLists.txt
src/openarm_bimanual_moveit_config/config/: moveit.rviz  openarm_bimanual.srdf
src/openarm_bimanual_moveit_config/launch/: demo.launch.py
src/openarm_can/install/: local_setup.sh  setup.sh
src/openarm_can/log/: latest_build
src/openarm_hardware/install/: local_setup.sh
src/openarm_move/: CMakeLists.txt  package.xml
src/openarm_move/src/: move_examples.cpp
src/openarm_p_p/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/openarm_p_p/launch/: move.launch.py
src/openarm_p_p/log/: latest_build
src/openarm_p_p/src/: openarm_p_p.cpp
test_openarm/src/openarm_bimanual/: .setup_assistant  CMakeLists.txt  package.xml
(+191 files in other folders)
